--- a/web.config
+++ b/web.config
@@ -10,5 +10,13 @@
             <!-- indicates that the app.js file is a node.js application to be handled by the iisnode module -->
             <add name="iisnode" path="server.js" verb="*" modules="iisnode" />
         </handlers>
-        </system.webServer>
+        <rewrite>
+            <rules>
+            <rule name="myapp">
+             <match url="/*" />
+             <action type="Rewrite" url="server.js" />
+             </rule>
+            </rules>
+        </rewrite>
+    </system.webServer>
 </configuration>
