--- a/web.config
+++ b/web.config
@@ -5,4 +5,7 @@
         <customErrors mode="Off"/>
     </system.web>
 
+    <system.webServer>
+        <httpErrors errorMode="Detailed"></httpErrors>
+    </system.webServer>
 </configuration>
