--- a/web.config
+++ b/web.config
@@ -6,6 +6,13 @@
     </system.web>
 
     <system.webServer>
+    
+    <system.webServer>
+        <handlers>
+            <!-- indicates that the app.js file is a node.js application to be handled by the iisnode module -->
+            <add name="iisnode" path="server.js" verb="*" modules="iisnode" />
+        </handlers>
+    </system.webServer>
         <httpErrors errorMode="Detailed"></httpErrors>
     </system.webServer>
 </configuration>
