--- a/web.config
+++ b/web.config
@@ -10,7 +10,7 @@
     <system.webServer>
         <handlers>
             <!-- indicates that the app.js file is a node.js application to be handled by the iisnode module -->
-            <add name="iisnode" path="server.js" verb="*" modules="iisnode" />
+            <add name="iisnode" path="package.json" verb="*" modules="iisnode" />
         </handlers>
     </system.webServer>
         <httpErrors errorMode="Detailed"></httpErrors>
