--- a/web.config
+++ b/web.config
@@ -7,12 +7,15 @@
 
     <system.webServer>
     
-    <system.webServer>
-        <handlers>
-            <!-- indicates that the app.js file is a node.js application to be handled by the iisnode module -->
-            <add name="iisnode" path="package.json" verb="*" modules="iisnode" />
-        </handlers>
-    </system.webServer>
+        <rewrite>
+            <rules>
+            <rule name="myapp">
+             <match url="/*" />
+             <action type="Rewrite" url="server.js" />
+            </rule>
+            </rules>
+        </rewrite>
+
         <httpErrors errorMode="Detailed"></httpErrors>
     </system.webServer>
 </configuration>
