--- a/web.config
+++ b/web.config
@@ -11,7 +11,7 @@
             <rules>
             <rule name="myapp">
              <match url="/*" />
-             <action type="Rewrite" url="server.js" />
+             <action type="Rewrite" url="package.json" />
             </rule>
             </rules>
         </rewrite>
