--- a/web.config
+++ b/web.config
@@ -6,7 +6,20 @@
     </system.web>
 
     <system.webServer>
-        
+    
+      <handlers>
+        <add name="iisnode" path="server.js" verb="*" modules="iisnode"/>
+      </handlers>
+
+      <rewrite>
+        <rules>
+            <rule name="DynamicContent">
+                 <match url="/*" />
+                 <action type="Rewrite" url="server.js"/>
+            </rule>
+       </rules>
+      </rewrite>
+    
     <!-- Make sure error responses are left untouched -->
     <httpErrors existingResponse="PassThrough" />
 
