--- a/web.config
+++ b/web.config
@@ -12,7 +12,14 @@
       </handlers>
 
       <rewrite>
-        <rules>
+       <rules>
+     
+      <!-- First we consider whether the incoming URL matches a physical file in the /public folder -->
+             <rule name="StaticContent">
+                 <action type="Rewrite" url="public{REQUEST_URI}" />
+             </rule>
+
+      <!-- All other URLs are mapped to the Node.js application entry point -->
             <rule name="DynamicContent">
                  <match url="/*" />
                  <action type="Rewrite" url="server.js"/>
