--- a/web.config
+++ b/web.config
@@ -6,7 +6,7 @@
     </system.web>
 
     <system.webServer>
-    
+    <webSocket enabled="true" />
       <handlers>
         <add name="iisnode" path="server.js" verb="*" modules="iisnode"/>
       </handlers>
